<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/manageReu_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageReunionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="2dp"
            android:padding="4dp">

            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="2dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/veuillez_entrer_les_informations_concernant_la_reunion_que_vous_souhaitez_ajouter"/>

            <EditText
                android:id="@+id/sujetReunion_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/welcome_text"
                android:hint="@string/sujet_reunion"/>

            <EditText
                android:id="@+id/emailReunion_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/sujetReunion_edt"
                android:hint="@string/email_organisateur"
                android:inputType="textWebEmailAddress"/>

            <TextView
                android:id="@+id/lieuReu_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/lieux_reunion"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailReunion_edt"
                android:layout_marginTop="10dp"/>

            <Spinner
                android:id="@+id/lieuReunion_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/lieu_reunion"
                app:layout_constraintTop_toBottomOf="@id/emailReunion_edt"
                app:layout_constraintBottom_toBottomOf="@id/lieuReu_txt"
                app:layout_constraintStart_toEndOf="@id/lieuReu_txt"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"/>


            <TextView
                android:id="@+id/openDialogTP_txt"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/open_time_picker"
                app:layout_constraintTop_toBottomOf="@id/lieuReu_txt"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:textAlignment="viewStart"/>

            <TextView
                android:id="@+id/openDialogDP_txt"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/lieuReu_txt"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="20sp"
                android:text="@string/open_date_picker"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="10dp"
                android:textAlignment="viewEnd"/>

            <Button
                android:id="@+id/addReu_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ajouter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/openDialogTP_txt"
                android:background="@color/colorPrimary"
                android:textColor="#ffff"/>

            <Button
                android:id="@+id/updateReu_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                app:layout_constraintTop_toBottomOf="@+id/openDialogDP_txt"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimary"
                android:textColor="#ffff"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>