...
        app:layout_constraintTop_toTopOf="@id/parent"
        app:layout_constraintBottom_toBottomOf="@id/parent"
        app:layout_constraintStart_toStartOf="@id/parent"
        android:src="@color/colorPrimary"/>

    <TextView
        android:id="@+id/sujetReu_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@id/color_reu"
        app:layout_constraintTop_toTopOf="@id/color_reu"
...
